unvalid_tests/syntax_errors/test1.go
// Test 1: Missing function keyword
main() {
    x := 10
}
